# kv-rs

./: Cargo.toml  README.md  abi.proto  build.rs
examples/: client.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_sled.rs
src/: error.rs
src/network/: frame.rs  mod.rs  stream.rs
src/pb/: abi.rs  mod.rs
src/service/: command_service.rs  mod.rs
src/storage/: memory.rs  mod.rs  sleddb.rs
