[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.3.3"
async-prost = "0.3.0"
# 最新版本不兼容
prost = "0.9"
futures = "0.3"
thiserror = "1.0.31"
http = "0.2"
sled = "0.34.7"
bytes = "1"

[build-dependencies]
prost-build = "0.9"

[dev-dependencies]
tempfile = "3.3.0"
